# bact-assoc-net

./: CITATION.cff  CLAUDE.md  Dockerfile  README.md  pyproject.toml
.claude/: settings.json
.claude/skills/add-analysis/: SKILL.md
.claude/skills/agent-bio-review/: SKILL.md
.claude/skills/agent-code-review/: SKILL.md
.claude/skills/agent-integration-review/: SKILL.md
.claude/skills/agent-reliability-review/: SKILL.md
.claude/skills/agent-stats-review/: SKILL.md
.claude/skills/benchmark/: SKILL.md
.claude/skills/cross-tool-check/: SKILL.md
.claude/skills/full-ci/: SKILL.md
.claude/skills/generate-synth-data/: SKILL.md
.claude/skills/lint/: SKILL.md
.claude/skills/reliability-check/: SKILL.md
.claude/skills/review-stats/: SKILL.md
.claude/skills/run-tests/: SKILL.md
.claude/skills/selfcheck/: SKILL.md
.claude/skills/validate-config/: SKILL.md
.claude/skills/validate-on-real/: SKILL.md
.claude/skills/validate-on-synth/: SKILL.md
.github/: copilot-instructions.md
docs/: anti_salami_checklist.json
examples/: config.yaml
examples/real/: network_real.yaml  network_real_all_layers_strict_prod.yaml
src/bactassocnet/: benchmark.py  cli.py  config.py  dashboard_launcher.py  innovation_v3.py  pipeline.py  selfcheck.py
src/bactassocnet/dashboards/: __init__.py  app.py
src/bactassocnet/gui/: marimo_app.py
src/bactassocnet/information_theory/: __init__.py  advanced.py  core.py
src/bactassocnet/io/: __init__.py
src/bactassocnet/reliability/: __init__.py
tests/: test_network.py  test_validation.py
