[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bact-assoc-net"
version = "1.0.0"
description = "Information-theoretic multi-layer network analysis with transfer entropy, PID, and simplicial topology"
requires-python = ">=3.10"
license = {text = "MIT"}
readme = "README.md"
authors = [
    {name = "Maciej Kochanowski", email = "m.kochanowski@piwet.pulawy.pl"}
]
keywords = ["antimicrobial resistance", "network analysis", "transfer entropy", "partial information decomposition", "simplicial complex", "Streptococcus suis", "bioinformatics"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Intended Audience :: Science/Research",
]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.11",
    "scikit-learn>=1.3",
    "statsmodels>=0.14",
    "joblib>=1.3",
    "pyyaml>=6.0",
    "tqdm>=4.66",
    "networkx>=3.1",
]

[project.urls]
Homepage = "https://github.com/MK-vet/bact-assoc-net"
Repository = "https://github.com/MK-vet/bact-assoc-net"
"Bug Tracker" = "https://github.com/MK-vet/bact-assoc-net/issues"

[project.optional-dependencies]
gui = ["marimo>=0.9", "plotly>=5.18", "matplotlib>=3.7"]
dev = ["pytest>=7", "pytest-cov>=4", "ruff>=0.4"]
all = ["bact-assoc-net[gui,dev]"]

[project.scripts]
bact-assoc-net = "bactassocnet.cli:main"
bact-assoc-net-dashboard = "bactassocnet.dashboard_launcher:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
